<resources>

    <!-- API -->
    <string name="API_URL">https://underdico.hdaroit.fr/api/</string>

    <!-- Base -->
    <string name="hello_blank_fragment">Bonjour fragment blanc</string>

    <!-- App -->
    <string name="app_name">UnderDico</string>

    <!-- Menu -->
    <string name="navigation_drawer_open">Ouverture du menu</string>
    <string name="navigation_drawer_close">Fermeture du menu</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">En-tête du menu</string>
    <string name="action_settings">Paramètres</string>
    <string name="menu_home">Accueil</string>
    <string name="menu_top">Top</string>
    <string name="menu_new">Nouvelle expression</string>
    <string name="menu_play">Jouer</string>
    <string name="privacy">Confidentialité</string>
    <string name="log_out">Se déconnecter</string>
    <string name="search">Rechercher</string>

    <!-- Forms -->
    <string name="fill_fields">Merci de renseigner tous les champs</string>

    <!-- Login -->
    <string name="title_activity_login">Connexion</string>
    <string name="action_sign_in">Connexion</string>
    <string name="register">S\'inscrire</string>
    <string name="login_fail">La connexion a échoué</string>
    <string name="expired_token">Le token a expiré</string>

    <!-- Register -->
    <string name="username_length_indication">Le pseudo doit faire entre 3 et 16 caractères</string>
    <string name="invalid_mail">L\'email est invalide</string>
    <string name="password_length_indication">Le mot de passe doit faire entre 6 et 32 caractères</string>
    <string name="passwords_do_not_match">Les mots de passe sont différents</string>
    <string name="password_confirmation">Confirmer le mot de passe</string>
    <string name="existing_login_details">Ces identifiants existent déjà</string>
    <string name="wrong_login_details">Identifiants incorrects</string>
    <string name="register_success">Inscription réussie !</string>
    <string name="register_fail">L\'inscription a échoué</string>

    <!-- User -->
    <string name="username">Pseudo</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="user_deleted">Cet utilisateur a été supprimé</string>
    <string name="deleted">Supprimé</string>

    <!-- Home -->
    <string name="day_expression">Expression du jour</string>
    <string name="last_expressions">Dernières expressions</string>

    <!-- New expression -->
    <string name="example">Exemple</string>
    <string name="invalid_name">Le nom est invalide</string>
    <string name="tag_exists">Le tag existe déjà</string>
    <string name="max_tag_reached">Vous avez atteint le nombre de tag maximal</string>
    <string name="invalid_definition">La définition est invalide</string>
    <string name="creation_failed">La création a échoué</string>
    <string name="expression_created">Votre expression a bien été créée !</string>

    <!-- Top -->
    <string name="day">Jour</string>
    <string name="week">Semaine</string>
    <string name="all_time">Toujours</string>
    <string name="no_top_expressions">Pas d\'expressions en top !</string>

    <!-- User page -->
    <string name="user">Utilisateur</string>
    <string name="admin">Administrateur</string>
    <string name="undefined">Non défini</string>
    <string name="karma">Karma</string>
    <string name="game_score">Score de jeu</string>

    <!-- Rooms -->
    <string name="room_name">Nom de la salle de jeu</string>
    <string name="create">Créer</string>
    <string name="create_room">Créer un salon</string>
    <string name="room_number_players">Nombre de joueurs maximum</string>
    <string name="expression_language">Langue des expressions</string>
    <string name="room_private">Salon privé</string>
    <string name="room_name_exists">Ce nom de salon existe déjà</string>
    <string name="room_name_not_found">Veuillez donner un nom au salon de jeu</string>
    <string name="room_full">La salle de jeu est complète</string>
    <string name="join_private_room">Rejoindre un salon privé</string>
    <string name="search_room">Chercher un salon</string>
    <string name="join_room">Rejoindre une partie</string>
    <string name="search_result">Résultat de la recherche</string>
    <string name="access_code">Code d\'accès</string>
    <string name="access_code_error">Ce code ne correspond à aucun salon</string>


    <!-- Game -->
    <string name="answer">Réponse</string>
    <string name="game_start">Démarrer la partie !</string>
    <string name="game_wait_owner">En attente du lancement par l\'hôte...</string>
    <string name="game_good_proposal">Bravo ! Bonne réponse </string>
    <string name="game_wrong_proposal">Désolés ! Mauvaise réponse </string>
    <string name="game_timeout">Trop tard pour toi</string>
    <string name="game_your_turn">A ton tour</string>
    <string name="not_enough_players">Deux joueurs minimum !</string>

    <!-- Errors -->
    <string name="expression_error">Une erreur est apparue lors de la récupération du/des expressions</string>
    <string name="rooms_error">Une erreur est apparue lors de la récupération des salles de jeu</string>
    <string name="error_vote">Une erreur est apparue lors du vote</string>
    <string name="error">Une erreur est apparue</string>
    <string name="error_network">Connexion au serveur échouée</string>
    <string name="no_image_selected">Vous n\'avez pas sélectionné d\'image</string>
    <string name="error_audio_save">Une erreur est apparue durant l\'enregistrement de l\'audio</string>
    <string name="error_audio_not_found">Pas d\'audio pour cette expression</string>

    <!-- Privacy -->
    <string name="download_data">Télécharger mes données</string>
    <string name="delete_account">Supprimer mon compte</string>
    <string name="account_deleted">Votre compte a bien été supprimé</string>
    <string name="summary_downloaded">Fichier disponible dans le répertoire Téléchargements</string>
    <string name="confirm">Je suis sûr(e)</string>
    <string name="cancel">Annuler</string>


</resources>
