<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/menu_top_part" android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/menu_top"
            android:icon="@drawable/ic_poll"
            android:title="@string/menu_top" />
        <item
            android:id="@+id/menu_new"
            android:icon="@drawable/ic_add"
            android:title="@string/menu_new" />
        <item
            android:id="@+id/menu_play"
            android:icon="@drawable/ic_play_surrounded"
            android:title="@string/menu_play" />

    </group>

    <group android:id="@+id/menu_bottom_part">
        <item
            android:id="@+id/menu_privacy"
            android:icon="@drawable/ic_fingerprint"
            android:title="@string/privacy" />
        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/log_out" />
    </group>

</menu>
